# tiff

./: CMakeLists.txt
cmake/: autoconf_utility.cmake
libtiff/: tif_config.h.cmake.in  tiffconf.h.cmake.in
